--- a/client/src/index.html
+++ b/client/src/index.html
@@ -4,10 +4,12 @@
   <meta charset="utf-8">
   <title>DatingApp</title>
   <base href="/">
+  <link rel="manifest" href="manifest.webmanifest">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <app-root></app-root>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
